# teamclaw

./: .gitignore  .mcp.json  2026-04-10-wiki-links-design.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: android.yml  ci.yml  release.yml  testflight-branch.yml  testflight.yml
apps/android/: README.md  build.gradle.kts  gradle.properties  secrets.defaults.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/gradle/: libs.versions.toml
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/daemon/src/channels/: acp_handle.rs  manager.rs  mod.rs  supabase_store.rs
apps/daemon/src/cli/: channel.rs  mod.rs  process.rs
apps/daemon/src/config/: daemon_config.rs  mod.rs
apps/daemon/src/daemon/: server.rs
apps/daemon/src/mqtt/: client.rs
apps/daemon/src/onboarding/: init.rs
apps/daemon/src/runtime/: manager.rs
apps/daemon/src/supabase/: client.rs
apps/desktop/: Cargo.toml  Info.plist  build.rs  rustc-ice-2026-03-23T10_32_52-93431.txt  tauri.conf.json  tauri.conf.json.sig
apps/desktop/binaries/: README.md  download-opencode.sh
apps/desktop/capabilities/: default.json
apps/desktop/crates/teamclaw-gateway/: Cargo.toml
apps/desktop/crates/teamclaw-gateway/src/: config.rs  discord.rs  email.rs  email_config.rs  email_db.rs  feishu.rs  feishu_config.rs  i18n.rs  kook.rs  kook_config.rs  lib.rs  pending_question.rs  session.rs  session_queue.rs  wechat.rs  wechat_config.rs  wecom_config.rs
apps/desktop/crates/teamclaw-introspect/: Cargo.toml
apps/desktop/crates/teamclaw-introspect/src/: capabilities.rs  channels.rs  config.rs  cron.rs  env_vars.rs  knowledge.rs  main.rs  roles.rs  send.rs  shortcuts.rs  sync.rs
apps/desktop/crates/teamclaw-p2p/: Cargo.toml  build.rs
apps/desktop/crates/teamclaw-p2p/src/: lib.rs  trash.rs
apps/desktop/crates/teamclaw-rag/: Cargo.toml
apps/desktop/crates/teamclaw-rag/src/: bm25.rs  chunker.rs  code_chunker.rs  config.rs  db.rs  embedding.rs  error.rs  hybrid_search.rs  indexer.rs  lib.rs  reranker.rs  search.rs  watcher.rs
apps/desktop/crates/teamclaw-sync/: Cargo.toml
apps/desktop/crates/teamclaw-sync/src/: lib.rs  oss_sync.rs  oss_types.rs  team_webdav.rs
apps/desktop/icons/: icon.icns  preview.html
apps/desktop/src/: lib.rs  main.rs  process_util.rs  proto.rs  sentry_utils.rs  webview_recovery.rs
apps/desktop/tauri-plugin-mcp-local/: Cargo.toml  How-Setup-Tauri-Mcp.md  README.md
apps/ios/: project.yml
apps/ios/AMUX.xcodeproj/: project.pbxproj
apps/ios/AMUXApp/: AMUXApp.swift  ChooseAuthView.swift  ContentView.swift  Info.plist  LoginView.swift  OnboardingViews.swift  WelcomeView.swift
apps/ios/AMUXUITests/: AMUXAuthUITests.swift  AMUXSessionLiveCaptureTest.swift  AMUXSessionLiveDiagTest.swift  AMUXSessionMessageRegressionTests.swift  AMUXSessionStreamingUITests.swift  AMUXUITests.swift
apps/ios/fastlane/: Appfile  Fastfile  Matchfile
autoui-mcp/: README.md
crates/teamclaw-gateway/: Cargo.toml
crates/teamclaw-gateway/src/: acp.rs  binding.rs  discord.rs  email.rs  feishu.rs  kook.rs  lib.rs  supabase_store.rs  wechat.rs  wecom.rs
crates/teamclaw-transport/: Cargo.toml
crates/teamclaw-transport/src/: lib.rs
docs/superpowers/plans/: 2026-05-08-amuxd-architecture-phase-0-1.md  2026-05-09-mention-trigger-redesign.md  2026-05-11-auto-restart-opencode-on-skills-change.md  2026-05-11-defer-opencode-restart-while-sessions-running.md
docs/superpowers/specs/: 2026-05-08-amuxd-architecture-design.md  2026-05-09-mention-trigger-redesign-design.md  2026-05-11-auto-restart-opencode-on-skills-change-design.md  2026-05-11-defer-opencode-restart-while-sessions-running-design.md
proto/: teamclaw.proto
scripts/: build-windows.js  build-windows.ps1  download-opencode-all.sh  ensure-introspect-sidecar.js  kill-opencode-for-build.ps1  rust-build-env.js  rust-cli.js  tauri-cli.js  update-opencode.js  update-tauri-config.js  verify-release-build.sh
services/fc/: index.mjs  package-lock.json  package.json  s.yaml
services/supabase/: config.toml  seed.sql
services/supabase/migrations/: 202604220001_init_extensions.sql  202604220002_core_schema.sql  202604220003_rls.sql  202604220004_harden_function_search_path.sql  202604220005_create_team_rpc.sql  202604220006_idea_rpc.sql  202604220007_workspace_agent_id.sql  202604220008_workspaces_unique_fix.sql  202604220009_daemon_invites.sql  202604220010_daemon_rpcs.sql  202604220011_claim_daemon_invite.sql  202604220012_create_session.sql  202604220013_agent_role_rls.sql  202604220014_claim_mints_refresh_token.sql  202604220015_actor_unified_identity.sql  202604220020_create_idea_workspace_default.sql  202604220021_claim_team_invite_shorter_refresh_token.sql  202604220022_remove_team_actor_rpc.sql  202604220023_actor_fks_on_delete_set_null.sql  202604220024_agents_device_id.sql  202604220025_team_invite_mqtt_deeplink.sql  202604220025_team_invites_target_actor_reinvite.sql  202604220026_check_agent_permission.sql  (+29 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/teamclaw-gateway/: Cargo.toml
src-tauri/crates/teamclaw-gateway/src/: wecom.rs
src-tauri/crates/teamclaw-rag/: Cargo.toml
src-tauri/src/: lib.rs  webview_recovery.rs
src-tauri/src/agent_events/: commands.rs  db.rs
src-tauri/src/commands/: app_settings.rs  env_vars.rs  filewatcher.rs  introspect_api.rs  mcp.rs  mod.rs  mqtt_bus.rs  opencode.rs  shared_secrets.rs  team.rs  team_p2p.rs  team_unified.rs  team_webdav.rs  window.rs
src-tauri/src/commands/cron/: mod.rs  scheduler.rs  storage.rs
src-tauri/src/commands/gateway/: mod.rs
src-tauri/src/local_cache/: commands.rs  store.rs
src-tauri/src/mqtt/: client.rs  mod.rs  topics.rs
src-tauri/src/telemetry/: commands.rs
src-tauri/src/terminal/: mod.rs  pty.rs  registry.rs  ring.rs
tests/_utils/: tauri-mcp-test-utils.ts
tests/e2e/: auto-update.test.ts  spotlight-bugs.test.ts  terminal-smoke.test.ts
(+171 files in other folders)
