[package]
name = "teamclaw-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
libsql = "0.9"
pulldown-cmark = "0.13"
sha2 = "0.10"
walkdir = "2"
notify-debouncer-full = "0.7"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
tracing = "0.1"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
